# play-php

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.m4  config.w32  main.c  php_play.h  play.c  play.php
play_core/: play_core.h  play_fastcgi.c  play_global_config.c  play_manager_action.c  play_manager_meta.c  play_socket.c  play_string.c  tool.c
play_interface/: play_interface.h  play_interface_action.c  play_interface_context.c  play_interface_crontab.c  play_interface_db.c  play_interface_input.c  play_interface_meta.c  play_interface_meta_router_abstract.c  play_interface_net.c  play_interface_netkit.c  play_interface_output.c  play_interface_play.c  play_interface_play_crontab.c  play_interface_play_init.c  play_interface_play_reconst.c  play_interface_processor.c  play_interface_query.c  play_interface_render_abstract.c  play_interface_utils.c
play_lib/uthash/: uthash.h
tests/: 001.phpt
